--- a/bichochic-android/app/src/main/res/layout/activity_main.xml
+++ b/bichochic-android/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
-                    android:text="Wolnei Cordeiro"
+                    android:text="BichoChic"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -117,18 +117,18 @@
 
                     <ImageView
                         android:id="@+id/imageView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="140dp"
+                        android:layout_height="150dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:srcCompat="@drawable/girl" />
+                        app:srcCompat="@drawable/dogdog" />
 
                     <TextView
                         android:id="@+id/textView10"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Desconto de 20% para \nCachorros!"
+                        android:text="Desconto de 20% para \nprodutos de Cachorros!"
                         android:textColor="@color/white"
                         android:textSize="18dp"
                         android:textStyle="bold"
@@ -195,7 +195,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/btn_3" />
+                            app:srcCompat="@drawable/ph_dog" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
@@ -228,7 +228,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/btn_3" />
+                            app:srcCompat="@drawable/ph_cat" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
@@ -255,13 +255,13 @@
 
                         <ImageView
                             android:id="@+id/imageView6"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="54dp"
+                            android:layout_height="57dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/btn_3" />
+                            app:srcCompat="@drawable/ph_fish" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
@@ -294,7 +294,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/cat1" />
+                            app:srcCompat="@drawable/ph_bird" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
@@ -327,7 +327,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/btn_3" />
+                            app:srcCompat="@drawable/lucide_rat" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
@@ -371,12 +371,15 @@
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/view1"
+                android:id="@+id/recyclerViewPopular"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingStart="16dp"
-                android:paddingEnd="16dp" />
+                android:paddingEnd="16dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:orientation="horizontal"
+                tools:orientation="horizontal"/>
 
         </LinearLayout>
     </ScrollView>
@@ -485,6 +488,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/productsBtn"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="0.2"
@@ -496,7 +500,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
                             android:layout_weight="1"
-                            app:srcCompat="@drawable/btn_4" />
+                            app:srcCompat="@drawable/cat5" />
 
                         <TextView
                             android:id="@+id/textView4"
@@ -504,9 +508,9 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
                             android:layout_weight="1"
-                            android:text="Usuário"
+                            android:text="Produtos"
                             android:textAlignment="center"
-                            android:textColor="#959595" />
+                            android:textColor="@color/black" />
                     </LinearLayout>
 
                 </LinearLayout>
